# lis

./: .cursorrules  .gitignore  Cargo.toml  Dockerfile  README-proto-1.md  README.md  TODO.md  docker-compose.yml  rhc_demo.md
benches/: read_write_benchmark.rs
client/: Cargo.toml
common/: Cargo.toml
demo/: filesystem-benchmarks.sh  setup-latency.sh
docs/: block-level-lease-optimization.md  cg-membership.md  consensus-groups.md  data-locality-and-replication.md  latency-driven-migration.md  why-cap-doesnt-matter-at-block-level.md
docs/lis/scenarios/: rifflabs.md
docs/rhc/: ABOUT.md  bft-two-flood.md  burst-buffer.md  crdt-types.md  index.md  leader-leases.md  lease-fencing.md  lease-proofs.md  timing-discipline.md
examples/: basic_lease_operations.rs  block_level_optimization.rs  cap_demo.rs  clock_skew_demo.rs  consensus_group_basics.rs  consensus_group_partition_recovery.rs  consistency_availability_tradeoffs.rs  distributed_leases_with_latency.rs  latency_demo.rs  latency_driven_lease_migration.rs  lease_demo.rs  lease_migration_with_clock_skew.rs  membership_changes.rs  o1_scalable_storage.rs  proxied_writes_and_ownership.rs  state_machine_replication.rs  store_rip_manifesto.rs  variable_block_storage.rs
metadata/: Cargo.toml
proto/: Cargo.toml
rhc/: Cargo.toml
rhc/examples/: rhc_demo.rs
rhc/src/: consensus.rs  crypto.rs  error.rs  lease.rs  lib.rs  message.rs  node.rs  storage.rs  test_utils.rs  time.rs
rhc/tests/: formal_verification.rs  global_consensus.rs  integration.rs  local_consensus.rs  regional_consensus.rs
src/: cli.rs  directory.rs  doc.rs  fuse.rs  fuse_fs.rs  lib.rs  main.rs  manifest.rs  node.rs  object.rs  prelude.rs  util.rs
src/athens/: mod.rs  network.rs  node.rs
src/hive/: mod.rs
src/lis-proto-1/: cli.rs  directory.rs  manifest.rs  object.rs
src/objects/: children.rs  dir.rs  file.rs  inode.rs  metadata.rs  mod.rs
src/rhc/: hlc.rs  mod.rs
src/rhc/crdt/: lease_state.rs  lww_register.rs  mod.rs  mv_register.rs  or_set.rs  pn_counter.rs  rga.rs
src/rhc/leases/: lease.rs  manager.rs  mod.rs  state.rs
storage/: Cargo.toml
tests/: fuse-read.rs  fuse-write.rs  hlc_clock_skew_test.rs  hlc_integration.rs  readdir.rs  test_rip_manifesto.txt  variable_block_storage_tests.rs
theory/: README.md  TODO.md
