[workspace]
resolver = "2"
members = [
    "rhc",
    "metadata",
    "storage",
    "client",
    "common",
    "proto",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Wings <wings@riff.cc>"]
license = "AGPL-3.0"
repository = "https://github.com/riffcc/lis"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
bytes = "1.7"
futures = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"
# BLS for threshold signatures
blst = "0.3"
# Protocol buffers
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["tls"] }
# FUSE filesystem
fuser = "0.14"
libc = "0.2"
# HTTP API for S3 compatibility
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
