[package]
name = "lis"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse3 = { version = "0.8", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
libc = "0.2"
bytes = "1.10.1"
futures-util = "0.3.31"
bitvec = "1.0.1"

# [[bin]]
# name = "lisfs"
# path = "src/bin/lisfs.rs"

[[example]]
name = "basic_lease_operations"
path = "examples/basic_lease_operations.rs"

[[example]]
name = "distributed_leases_with_latency"
path = "examples/distributed_leases_with_latency.rs"

[[example]]
name = "consistency_availability_tradeoffs"
path = "examples/consistency_availability_tradeoffs.rs"

[[example]]
name = "lease_migration_with_clock_skew"
path = "examples/lease_migration_with_clock_skew.rs"

[[example]]
name = "consensus_group_partition_recovery"
path = "examples/consensus_group_partition_recovery.rs"

[[example]]
name = "consensus_group_basics"
path = "examples/consensus_group_basics.rs"

[[example]]
name = "state_machine_replication"
path = "examples/state_machine_replication.rs"

[[example]]
name = "membership_changes"
path = "examples/membership_changes.rs"

[[example]]
name = "proxied_writes_and_ownership"
path = "examples/proxied_writes_and_ownership.rs"

[[example]]
name = "latency_driven_lease_migration"
path = "examples/latency_driven_lease_migration.rs"

[[example]]
name = "block_level_optimization"
path = "examples/block_level_optimization.rs"

[[example]]
name = "o1_scalable_storage"
path = "examples/o1_scalable_storage.rs"

[[example]]
name = "variable_block_storage"
path = "examples/variable_block_storage.rs"
