[package]
name = "rhc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
blst = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"

[[example]]
name = "rhc_demo"
path = "examples/rhc_demo.rs"

[[bin]]
name = "lismount"
path = "src/bin/lismount.rs"

[[bin]]
name = "lis-s3-api"
path = "src/bin/lis-s3-api.rs"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
